Correção dos conflitos das merges
